# opencl-image-fade

./: .gitignore  CMakeLists.txt  README.md  main.cpp  opencl_error_codes.txt
